k8s/taxi-service.yaml






apiVersion: v1
kind: Service
metadata:
  name: taxi-service
spec:
  selector:
    app: taxi
  ports:
    - port: 8000
      targetPort: 8000
