k8s/taxi-ingress.yaml


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: taxi-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: taxi-service
                port:
                  number: 8000
